--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,15 +1,12 @@
 {% extends 'bootstrap/base.html' %}
 
 {% block title %}
-    {% if title %}
-        {{ title }}
-    {% else %}
-        BrainMorph
-    {% endif %}
+    {% if title %}{{ title }}{% else %}BrainMorph{% endif %}
 {% endblock %}
 
 {% block navbar %}
     <nav class="navbar navbar-default">
+
         <div class="container">
 
             <div class="navbar-header">
@@ -18,28 +15,37 @@
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
+                {% if not current_user.is_anonymous %}
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('route_main_page') }}">Главная</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Выйти</a></li>
+                    <li><a href="{{ url_for('logout') }}">Выйти</a></li>
                 </ul>
+                {% endif %}
 
             </div>
+
         </div>
+
     </nav>
 {% endblock %}
 
 {% block content %}
     <div class="container">
+
         {% with messages = get_flashed_messages() %}
         {% if messages %}
-            {% for message in messages %}
-            <div class="alert alert-info" role="alert">{{ message }}</div>
-            {% endfor %}
+        {% for message in messages %}
+            <div class="alert alert-info" role="alert">
+                {{ message }}
+            </div>
+        {% endfor %}
         {% endif %}
         {% endwith %}
+
         {% block app_content %}{% endblock %}
+
     </div>
 {% endblock %}
