--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,30 +1,37 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-    <a href="{{ url_for('patient_registration') }}" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Создать пациента</a>
 
-    {% if patients %}
+    {% if patients is not none %}
     <div class="container">
-        <h2>Список пациентов</h2>
+        <h2 align="center">Список пациентов</h2>
+
         {% for patient in patients %}
             {% include '_patient.html' %}
         {% endfor %}
 
         <nav aria-label="...">
             <ul class="pager">
+
                 <li class="previous{% if not prev_url %} disabled{% endif %}">
-                    <a href="{{ prev_url or '#' }}">
-                        <span aria-hidden="true">&larr;</span> Назад
-                    </a>
+                    <a href="{{ prev_url or '#' }}"><span aria-hidden="true">&larr;</span>Назад</a>
                 </li>
+
                 <li class="next{% if not next_url %} disabled{% endif %}">
-                    <a href="{{ next_url or '#' }}">
-                        Далее <span aria-hidden="true">&rarr;</span>
-                    </a>
+                    <a href="{{ next_url or '#' }}">Далее <span aria-hidden="true">&rarr;</span></a>
                 </li>
+
             </ul>
         </nav>
+
     </div>
+
+    <div class="container" style="margin-top:80px">
+        <a href="{{ url_for('patient_registration') }}" class="btn btn-primary btn-lg active btn-block"
+           role="button" aria-pressed="true">Создать пациента
+        </a>
+    </div>
+
     {% endif %}
 
 {% endblock %}
