--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block navbar %}
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default" id="navbar">
 
         <div class="container">
 
@@ -33,7 +33,12 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container">
+
+    <div id="loading" style="display:none; width: max-content; margin: auto;">
+        <img src="{{ url_for('static', filename='preloader.gif') }}">
+    </div>
+
+    <div class="container" id="content">
 
         {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -48,4 +53,9 @@
         {% block app_content %}{% endblock %}
 
     </div>
+{% endblock %}
+
+{% block scripts %}
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+    {{ super() }}
 {% endblock %}
