--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,10 +2,8 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>Авторизация</h1>
-    <div class="row">
-        <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
-        </div>
+    <div class="container col-sm-4 col-md-offset-3">
+        <p class="h2 text-center">Авторизация</p>
+        {{ wtf.quick_form(form) }}
     </div>
 {% endblock %}
