--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -3,40 +3,45 @@
 {% block app_content %}
 
     {% if not current_user.is_admin %}
-    {% if patients is not none %}
-    <div class="container">
-        <h2 align="center">Список пациентов</h2>
+         <div class="container">
+             <p class="h1 col-sm-4">Список пациентов</p>
 
-        {% for patient in patients %}
-            {% include '_patient.html' %}
-        {% endfor %}
+            <div class="col-sm-4 col-md-offset-6">
+                <a href="{{ url_for('patient_registration') }}" class="btn btn-primary active" role="button"
+                   aria-pressed="true">Добавить пациента
+                </a>
+            </div>
 
-        <nav aria-label="...">
-            <ul class="pager">
+        </div>
 
-                {% if prev_url %}
-                <li class="previous{% if not prev_url %} disabled{% endif %}">
-                    <a href="{{ prev_url or '#' }}"><span aria-hidden="true">&larr;</span>Назад</a>
-                </li>
-                {% endif %}
+        {% if patients %}
+        <div class="container col-md-5" style="margin-top: 20px">
+            <div class="list-group">
+                {% for patient in patients %}
+                    {% include '_patient.html' %}
+                {% endfor %}
+            </div>
 
-                {% if next_url %}
-                <li class="next{% if not next_url %} disabled{% endif %}">
-                    <a href="{{ next_url or '#' }}">Далее <span aria-hidden="true">&rarr;</span></a>
-                </li>
-                {% endif %}
+            <nav aria-label="...">
+                <ul class="pager">
 
-            </ul>
-        </nav>
+                    {% if prev_url %}
+                    <li class="previous{% if not prev_url %} disabled{% endif %}">
+                        <a href="{{ prev_url or '#' }}"><span aria-hidden="true">&larr;</span>Назад</a>
+                    </li>
+                    {% endif %}
 
-    </div>
-    {% endif %}
+                    {% if next_url %}
+                    <li class="next{% if not next_url %} disabled{% endif %}">
+                        <a href="{{ next_url or '#' }}">Далее <span aria-hidden="true">&rarr;</span></a>
+                    </li>
+                    {% endif %}
 
-    <div class="container" style="margin-top:80px">
-        <a href="{{ url_for('patient_registration') }}" class="btn btn-primary btn-lg active btn-block"
-           role="button" aria-pressed="true">Создать пациента
-        </a>
-    </div>
+                </ul>
+            </nav>
+
+        </div>
+        {% endif %}
     {% endif %}
 
     {% if current_user.is_admin %}
