--- a/app/templates/series.html
+++ b/app/templates/series.html
@@ -3,9 +3,17 @@
 
 {% block app_content %}
 
+{% if series.error_type %}
+<div class="alert alert-danger" role="alert">
+  <h4 class="alert-heading">Произошла ошибка во время анализа!</h4>
+  <p>Во время анализа этой серии произошла ошибка. Рекомендуется удалить данную серию с записи пациента.</p>
+</div>
+{% endif %}
+
 <div class="container">
+    <p class="h1 text-center">{{ series.desc }}</p>
+
     <div class="row">
-        <h1 align="center">{{ series.desc }}</h1>
 
         <div class="col-md-5">
 
@@ -35,35 +43,85 @@
 
         </div>
 
-        <div class="col-md-offset-3">
-            <img src="{{ url_for('static', filename=series.img_path) }}">
+        <div class="col-md-5 btn-group-vertical">
+            <a href="{{ url_for('route_patient_page', patient_id=patient_id) }}" role="button" aria-pressed="true"
+               class="btn btn-primary btn-lg active btn-block">
+                Вернуться на страницу пациента
+            </a>
+
+            <a href="{{ url_for('delete_series', patient_id=patient_id, series_id=series.id) }}" role="button"
+               style="margin-top: 10px" class="btn btn-primary btn-lg active btn-block" aria-pressed="true">
+                Удалить
+            </a>
+
+            {% if series.left_volume is none %}
+            <a href="{{ url_for('analyze_series', patient_id=patient_id, series_id=series.id) }}" role="button"
+               class="btn btn-primary btn-lg active btn-block" aria-pressed="true" style="margin-top: 10px" id="analyzing">
+                Анализ
+            </a>
+            {% endif %}
+
         </div>
 
     </div>
 </div>
 
+<div id="carouselExampleIndicators" class="col-md-5 col-md-offset-2 carousel slide" data-ride="carousel" style="margin-top: 30px">
 
-<div class="container" style="margin-top:80px">
-    <a href="{{ url_for('route_patient_page', patient_id=patient_id) }}"
-       class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">
-        Вернуться на страницу пациента
-    </a>
+  <ol class="carousel-indicators">
+      {% for idx in range(series.image_paths|length) %}
+      {% if idx == '0' %}
+      <li data-target="#carouselExampleIndicators" data-slide-to={{idx}} class="active"></li>
+      {% else %}
+      <li data-target="#carouselExampleIndicators" data-slide-to={{idx}}></li>
+      {% endif %}
+      {% endfor %}
+  </ol>
+
+  <div class="carousel-inner" role="listbox">
+
+      <div class="item active">
+          <img src="{{ url_for('static', filename=series.image_paths[0]) }}">
+          <div class="carousel-caption">
+              <p>Срез №{{ series.image_paths[0].split('/')[-1].split('.')[0] }}</p>
+          </div>
+      </div>
+
+      {% for image_path in series.image_paths[1:] %}
+      <div class="item">
+          <img src="{{ url_for('static', filename=image_path) }}">
+          <div class="carousel-caption">
+              <p>Срез №{{ image_path.split('/')[-1].split('.')[0] }}</p>
+          </div>
+      </div>
+      {% endfor %}
+
+  </div>
+  <a class="left carousel-control" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+
+  <a class="right carousel-control" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
 
-<div class="container" style="margin-top:80px">
-    <a href="{{ url_for('delete_series', patient_id=patient_id, series_id=series.id) }}"
-       class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">
-        Удалить
-    </a>
-</div>
+{% block scripts %}
+    {{ super() }}
+    <script>
+        var el = document.getElementById('analyzing');
+        el.onclick = preAnalyze;
 
-{% if series.left_volume is none %}
-<div class="container" style="margin-top:80px">
-    <a href="{{ url_for('analyze_series', patient_id=patient_id, series_id=series.id) }}"
-       class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">
-        Анализ
-    </a>
-</div>
-{% endif %}
+        function preAnalyze() {
+            $('#preloader').show();
+            $('#content').hide();
+            $('#navbar').hide();
+            el.submit();
+            return false;
+        }
+    </script>
+{% endblock %}
 
 {% endblock %}
