--- a/app/templates/email/login_password.html
+++ b/app/templates/email/login_password.html
@@ -1,6 +1,6 @@
 <p>Уважаемый {{ user.name }} {{ user.surname }},</p>
 
-<p>Вам предоствлен доступ к системе <a href="#">BrainMorph</a> </p>
+<p>Данные авторизации к системе BrainMorph</p>
 
 <p><b>Логин</b>: {{ user.id }}</p>
-<p><b>Пароль</b>: {{ password }}</p>
+<p><b>Пароль</b>: {{ user.password }}</p>
