--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-    <h1>Возникла непредвиденная ошибка</h1>
+    <p class="h1">Возникла непредвиденная ошибка</p>
     <p>Техническая поддержка уведомлена. Просим извинения за неудобство!</p>
 {% endblock %}
