--- a/app/templates/patients/_patient.html
+++ b/app/templates/patients/_patient.html
@@ -1,5 +1,5 @@
 <a class="list-group-item list-group-item-action {{ item_class }} d-flex justify-content-between align-items-center"
-   href="{{ url_for('route_patient_page', patient_id=patient.id) }}" style="margin-bottom: 5px">
+   href="{{ url_for('patients.route_page', patient_id=patient.id) }}" style="margin-bottom: 5px">
     <span class="text-info">{{ patient.registration_data.surname }} {{ patient.registration_data.name }}</span>
     <span class="badge badge-primary badge-pill">{{ patient.series_data|length }}</span>
 </a>
