--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -7,7 +7,7 @@
              <p class="h1 col-sm-4">Список пациентов</p>
 
             <div class="col-sm-4 col-md-offset-6">
-                <a href="{{ url_for('patient_registration') }}" class="btn btn-primary active" role="button"
+                <a href="{{ url_for('patients.register') }}" class="btn btn-primary active" role="button"
                    aria-pressed="true">Добавить пациента
                 </a>
             </div>
@@ -18,7 +18,7 @@
         <div class="container col-md-5" style="margin-top: 20px">
             <div class="list-group">
                 {% for patient in patients %}
-                    {% include '_patient.html' %}
+                    {% include 'patients/_patient.html' %}
                 {% endfor %}
             </div>
 
@@ -45,22 +45,25 @@
     {% endif %}
 
     {% if current_user.is_admin %}
-    {% if users|length > 1 %}
     <div class="container">
-        <h2 align="center">Пользователи</h2>
+        <p class="h1 col-sm-4">Пользователи</p>
 
-        {% for user in users %}
-            {% if not user.is_admin %}
-            {% include '_user.html' %}
-            {% endif %}
-        {% endfor %}
-    </div>
-    {% endif %}
+        <div class="col-sm-4 col-md-offset-6">
+            <a href="{{ url_for('users.register') }}" class="btn btn-primary btn-lg active btn-block"
+               role="button" aria-pressed="true">Добавить пользователя
+            </a>
+        </div>
 
-    <div class="container" style="margin-top:80px">
-        <a href="{{ url_for('user_register') }}" class="btn btn-primary btn-lg active btn-block"
-           role="button" aria-pressed="true">Добавить нового пользователя
-        </a>
+        {% if users %}
+        <div class="container col-md-5 list-group">
+            {% for user in users %}
+                {% if not user.is_admin %}
+                {% include 'users/_user.html' %}
+                {% endif %}
+            {% endfor %}
+        </div>
+        {% endif %}
+
     </div>
     {% endif %}
 
