--- a/app/templates/patients/_series.html
+++ b/app/templates/patients/_series.html
@@ -1,13 +1,13 @@
 {% if series.left_volume %}
 {% set item_class = 'list-group-item-success' %}
-{% elif series.error_type %}
+{% elif series.status is not none and series.status != 'ok' %}
 {% set item_class = 'list-group-item-danger' %}
 {% else %}
 {% set item_class = '' %}
 {% endif %}
 
 <a class="list-group-item list-group-item-action {{ item_class }} d-flex justify-content-between align-items-center"
-   href="{{ url_for('route_series_page', patient_id=patient.id, series_id=series.id) }}">
+   href="{{ url_for('patients.route_series_page', patient_id=patient.id, series_id=series.id) }}">
     <span class="text-info">{{ series.desc }}</span>
     <span class="badge badge-primary badge-pill">{{ series.slice_count }}</span>
 </a>
